Mudando alguns links do index

--- a/views/relatorio.html
+++ b/views/relatorio.html
@@ -34,7 +34,7 @@
                         <a class="dropdown-item" href="#">Meu Perfil</a>
                         <a class="dropdown-item" href="#">Configurações</a>
                         <a class="dropdown-item" href="#">Central de ajuda</a>
-                        <a class="dropdown-item" href="/views/index.html">Sair</a>
+                        <a class="dropdown-item" href="/index.html">Sair</a>
                     </div>
                 </div>
                 <div class="notification-bell ml-3" onclick="toggleNotifications()"> <!-- Sino de notificações -->
