--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -36,7 +36,7 @@
                         <a class="dropdown-item" href="#">Meu Perfil</a>
                         <a class="dropdown-item" href="#">Configurações</a>
                         <a class="dropdown-item" href="#">Central de ajuda</a>
-                        <a class="dropdown-item" href="/views/index.html">Sair</a>
+                        <a class="dropdown-item" href="/index.html">Sair</a>
                     </div>
                 </div>
 
