--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -6,13 +6,13 @@
     <title>Dashboard Financeiro</title>
     <link rel="icon" href="/images/ifood_logo-baixa 1.svg" type="image/png"> 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css"> 
+    <link rel="stylesheet" href="../style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"> <!-- Barra de navegação -->
         <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="/images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar mr-2"> 
+            <img src="../images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar mr-2"> 
             <span class="h4 font-weight-bold">Financeiro</span>
         </a>
         
