atualizando links do dashboard

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -21,22 +21,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav"> <!-- Conteúdo da barra de navegação -->
             <ul class="navbar-nav mx-auto"> 
-                <li class="nav-item"><a class="nav-link" href="/views/dashboard.html">Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="/views/transacoes.html">Transações</a></li>
-                <li class="nav-item"><a class="nav-link" href="/views/relatorio.html">Relatório e análises financeiras</a></li>
+                <li class="nav-item"><a class="nav-link" href="../views/dashboard.html">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="../views/transacoes.html">Transações</a></li>
+                <li class="nav-item"><a class="nav-link" href="../views/relatorio.html">Relatório e análises financeiras</a></li>
             </ul>
             <div class="d-flex align-items-center"> <!-- Botões e dropdown -->
                 <button class="btn btn-outline-info mr-3">Nota Fiscal ⇩</button> 
 
                 <div class="dropdown"> <!-- Dropdown de perfil -->
                     <button class="btn dropdown-toggle p-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="/images/perfil.svg" alt="Perfil" class="rounded-circle mr-2 avatar-perfil">
+                        <img src="../images/perfil.svg" alt="Perfil" class="rounded-circle mr-2 avatar-perfil">
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="#">Meu Perfil</a>
                         <a class="dropdown-item" href="#">Configurações</a>
                         <a class="dropdown-item" href="#">Central de ajuda</a>
-                        <a class="dropdown-item" href="/index.html">Sair</a>
+                        <a class="dropdown-item" href="../index.html">Sair</a>
                     </div>
                 </div>
 
@@ -84,7 +84,7 @@
                     <h5>Transferências de hoje</h5>
                     <h3 class="text-success">R$ 9.440,80</h3>
                     <p>Feito em 4 pagamentos</p>
-                    <a href="/views/transacoes.html" class="text-danger">Ver transferências de hoje</a>
+                    <a href="../views/transacoes.html" class="text-danger">Ver transferências de hoje</a>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
@@ -92,7 +92,7 @@
                     <h5>Transferência agendada</h5>
                     <h3>R$ 3.180,43</h3>
                     <p>Próxima transferência em 31/04</p>
-                    <a href="/views/transacoes.html" class="text-danger">Ver transferência agendada</a>
+                    <a href="../views/transacoes.html" class="text-danger">Ver transferência agendada</a>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
@@ -100,7 +100,7 @@
                     <h5>Despesas</h5>
                     <h3 class="text-danger">R$ 1.080,43</h3>
                     <p>Total de taxas</p>
-                    <a href="/views/transacoes.html" class="text-danger">Ver despesas</a>
+                    <a href="../views/transacoes.html" class="text-danger">Ver despesas</a>
                 </div>
             </div>
         </div>
@@ -114,7 +114,7 @@
                     <div id="chart-placeholder">
                         <canvas id="salesChart" width="300" height="300"></canvas> <!-- Container para o gráfico de vendas -->
                     </div>
-                    <a href="/views/relatorio.html" class="text-danger">Ver detalhes</a>
+                    <a href="../views/relatorio.html" class="text-danger">Ver detalhes</a>
                 </div>
             </div>
 
@@ -150,21 +150,21 @@
                                     <tbody>
                                         <tr>
                                             <td>1º</td>
-                                            <td><img src="/images/açai.svg" alt="Açaí 500 ml" class="img-thumbnail"></td>
+                                            <td><img src="../images/açai.svg" alt="Açaí 500 ml" class="img-thumbnail"></td>
                                             <td>Açaí 500 ml</td>
                                             <td>390</td>
                                             <td>R$ 5.850,00</td>
                                         </tr>
                                         <tr>
                                             <td>2º</td>
-                                            <td><img src="/images/Smash burger.svg" alt="Smash burger" class="img-thumbnail"></td>
+                                            <td><img src="../images/Smash burger.svg" alt="Smash burger" class="img-thumbnail"></td>
                                             <td>Smash burger</td>
                                             <td>283</td>
                                             <td>R$ 5.462,10</td>
                                         </tr>
                                         <tr>
                                             <td>3º</td>
-                                            <td><img src="/images/coca.svg" alt="Coca 350 ml" class="img-thumbnail"></td>
+                                            <td><img src="../images/coca.svg" alt="Coca 350 ml" class="img-thumbnail"></td>
                                             <td>Coca 350 ml</td>
                                             <td>230</td>
                                             <td>R$ 1.035,00</td>
@@ -179,35 +179,35 @@
                             <h6>Região com mais vendas</h6>
                             <div class="mt-3">
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/casa-1.svg" alt="Jabaquara" class="mr-2">
+                                    <img src="../images/casa-1.svg" alt="Jabaquara" class="mr-2">
                                     <span class="flex-grow-1">Jabaquara</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 80%;">230 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/casa-1.svg" alt="Moema" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
+                                    <img src="../images/casa-1.svg" alt="Moema" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">Moema</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 70%;">198 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/casa-1.svg" alt="Saúde" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
+                                    <img src="../images/casa-1.svg" alt="Saúde" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">Saúde</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 60%;">147 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/casa-1.svg" alt="São Judas" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
+                                    <img src="../images/casa-1.svg" alt="São Judas" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">São Judas</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 40%;">99 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/casa-1.svg" alt="Ibirapuera" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
+                                    <img src="../images/casa-1.svg" alt="Ibirapuera" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">Ibirapuera</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 20%;">33 Vendas</div>
@@ -269,49 +269,49 @@
                             <h6>Meios de pagamentos mais usados</h6>
                             <div class="mt-3">
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/cartão.svg" alt="Crédito" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
+                                    <img src="../images/cartão.svg" alt="Crédito" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
                                     <span class="flex-grow-1">Crédito</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 80%;">230 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/pix-1.svg" alt="Pix" class="mr-2" style="width: 47px; height: 44px; object-fit: cover;">
+                                    <img src="../images/pix-1.svg" alt="Pix" class="mr-2" style="width: 47px; height: 44px; object-fit: cover;">
                                     <span class="flex-grow-1">Pix</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 70%;">198 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/cartão.svg" alt="Débito" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
+                                    <img src="../images/cartão.svg" alt="Débito" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
                                     <span class="flex-grow-1">Débito</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 60%;">147 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/nota.svg" alt="Dinheiro" class="mr-2" style="width: 41px; height: 30px; object-fit: cover;">
+                                    <img src="../images/nota.svg" alt="Dinheiro" class="mr-2" style="width: 41px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">Dinheiro</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 40%;">99 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/cartão.svg" alt="Vale refeição" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
+                                    <img src="../images/cartão.svg" alt="Vale refeição" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
                                     <span class="flex-grow-1">Vale refeição</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 20%;">33 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/cartão.svg" alt="Vale alimentação" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
+                                    <img src="../images/cartão.svg" alt="Vale alimentação" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
                                     <span class="flex-grow-1">Vale alimentação</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 5%;">5 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/cartão.svg" alt="Outros" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
+                                    <img src="../images/cartão.svg" alt="Outros" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
                                     <span class="flex-grow-1">Outros</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 0%;">0 Vendas</div>
