--- a/views/transacoes.html
+++ b/views/transacoes.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transações</title>
-    <link rel="icon" href="/images/ifood_logo-baixa 1.svg" type="image/png"> 
+    <link rel="icon" href="../images/ifood_logo-baixa 1.svg" type="image/png"> 
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css"> 
+    <link rel="stylesheet" href="../style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body> <!-- Corpo da página -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"> <!-- Barra de navegação -->
         <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="/images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar"> 
+            <img src="../images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar"> 
             <span class="h4 font-weight-bold">Financeiro</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,21 +21,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav"> <!-- Conteúdo da barra de navegação -->
             <ul class="navbar-nav mx-auto"> 
-                <li class="nav-item"><a class="nav-link" href="/views/dashboard.html">Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="/views/transacoes.html">Transações</a></li>
-                <li class="nav-item"><a class="nav-link" href="/views/relatorio.html">Relatório e análises financeiras</a></li>
+                <li class="nav-item"><a class="nav-link" href="../views/dashboard.html">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="../views/transacoes.html">Transações</a></li>
+                <li class="nav-item"><a class="nav-link" href="../views/relatorio.html">Relatório e análises financeiras</a></li>
             </ul>
             <div class="d-flex align-items-center"> <!-- Botões e dropdown -->
                 <button class="btn btn-outline-info mr-3">Nota Fiscal ⇩</button>
                 <div class="dropdown"> <!-- Dropdown de perfil -->
                     <button class="btn dropdown-toggle p-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="/images/perfil.svg" alt="Perfil" class="rounded-circle mr-2 avatar-perfil">
+                        <img src="../images/perfil.svg" alt="Perfil" class="rounded-circle mr-2 avatar-perfil">
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="#">Meu Perfil</a>
                         <a class="dropdown-item" href="#">Configurações</a>
                         <a class="dropdown-item" href="#">Central de ajuda</a>
-                        <a class="dropdown-item" href="/index.html">Sair</a>
+                        <a class="dropdown-item" href="../index.html">Sair</a>
                     </div>
                 </div>
                 <div class="notification-bell ml-3" onclick="toggleNotifications()"> <!-- Sino de notificações -->
@@ -155,8 +155,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
-    <script src="/js/notificao.js"></script> <!-- Script das notificações -->
-    <script src="/js/pdf-transacoes.js"></script> <!-- Script para gerar PDF das transações -->
-    <script src="/js/navbar-vermelho.js"></script> <!-- Script para eventos de clique -->
+    <script src="../js/notificao.js"></script> <!-- Script das notificações -->
+    <script src="../js/pdf-transacoes.js"></script> <!-- Script para gerar PDF das transações -->
+    <script src="../js/navbar-vermelho.js"></script> <!-- Script para eventos de clique -->
 </body>
 </html>
